--- a/css/styles.css
+++ b/css/styles.css
@@ -10839,8 +10839,25 @@ body {
   padding: 8rem 0;
 }
 
+.text-white-60 {
+  color: black !important;
+  text-align: center;
+}
+
+.text-white-65 {
+  color: black !important;
+  text-align: center;
+}
+
 .text-white-75 {
   color: rgba(255, 255, 255, 0.75) !important;
+  text-align: left;
+}
+
+#Join-Us{
+  background-color: cyan;
+  text-align: center;
+  height: 300px;
 }
 
 .btn-xl {
@@ -10929,7 +10946,7 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/kidocode_family.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
